[package]
name = "web_rtc_t"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc = "0.9"
turn = "0.7"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = "4"
signal = "0.7"
serde_json = "1"
base64 = "0.21"
lazy_static = "1"
hyper = { version = "0.14.27", features = ["full"] }
